Lab 2: Updated  portfolio website

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,32 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Lab 2 Website</title>
+    <meta charset="UTF-8">
+    <title>Pankaj More | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Welcome to My Website</h1>
+<header>
+    <h1>Pankaj More</h1>
+    <p>DevOps & Cloud Computing Enthusiast</p>
+    <div class="links">
+        <a href="https://github.com/pankajmores" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/pankaj-more-7b7485289" target="_blank">LinkedIn</a>
+        <a href="mailto:pankaj.more@mitwpu.edu.in">Email</a>
+    </div>
+</header>
 
-    <section>
-        <h2>About</h2>
-        <p>This is my Lab 2 assignment.</p>
-    </section>
+<section class="about">
+    <h2>About Me</h2>
+    <p>
+        I am a Computer Science undergraduate passionate about DevOps, Cloud Computing,
+        and backend development. I enjoy building scalable, secure, and automated systems
+        using modern cloud-native technologies.
+    </p>
+</section>
 
-    <section>
-        <h2>Skills</h2>
-        <p>HTML, CSS</p>
-    </section>
+<section class="skills">
+    <h2>Technical Skills</h2>
+    <ul>
+        <li><strong>Languages:</strong> Python, C++, Java, SQL, JavaScript</li>
+        <li><strong>Cloud:</strong> AWS (EC2, S3, RDS, IAM)</li>
+        <li><strong>DevOps:</strong> Docker, Jenkins, Kubernetes (Basics), CI/CD</li>
+        <li><strong>Backend:</strong> Flask, REST APIs, JWT Authentication</li>
+        <li><strong>ML:</strong> Pandas, NumPy, Scikit-learn, TensorFlow (Basics)</li>
+        <li><strong>Tools:</strong> Git, GitHub, VS Code, Linux</li>
+    </ul>
+</section>
 
-    <section>
-        <h2>Projects</h2>
-        <p>Personal Website</p>
-    </section>
+<section class="projects">
+    <h2>Projects</h2>
 
-    <section>
-        <h2>Contact</h2>
-        <p>Email: example@gmail.com</p>
-    </section>
+    <div class="project">
+        <h3>Lost & Found AI</h3>
+        <p>
+            AI-powered system to match lost and found items using NLP-based semantic similarity.
+        </p>
+        <span>Python | Flask | NLP | Docker | MySQL</span>
+    </div>
+
+    <div class="project">
+        <h3>CodeGuardian</h3>
+        <p>
+            AI-powered DevOps code review assistant for analyzing commits and pull requests.
+        </p>
+        <span>Docker | Jenkins | AWS | Microservices</span>
+    </div>
+</section>
+
+<section class="education">
+    <h2>Education</h2>
+    <p>
+        <strong>B.Tech in Computer Science</strong><br>
+        MIT World Peace University, Pune<br>
+        CGPA: 8.0 / 10
+    </p>
+</section>
+
+<footer>
+    <p>© 2026 Pankaj More | Portfolio Website</p>
+</footer>
 
 </body>
 </html>
